...
              child: Padding(
                padding: const EdgeInsets.all(16.0),
                child: Column(
                  crossAxisAlignment: CrossAxisAlignment.start,
                  children: [
                    Text(
                      'Recipe Details',
                      style: Theme.of(context).textTheme.titleLarge,
                    ),
                    const SizedBox(height: 16),
                    Text('Source: ${recipe['domain']}'),
                    Text('Date Added: ${recipe['date']}'),
                    if (recipe['prepTime'] > 0)
...
